Fix hero stars overflowing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -93,7 +93,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   transition: opacity 1s ease-in-out;
 }
 
